Fase 5. Correcciones adicionales
